[package]
name = "version_pick"
version = "0.1.0"
edition = "2021"
authors = [ "Malte Vesper <malte.vesper@gmx.net>" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "^0.13.25"
fail = "0.5.0"
failure = "^0.1.8"

[dev-dependencies]
cmd_lib = "1.3.0"
mktemp = "0.4.1"

[[test]]
# requires the feature to be enabled otherwise test is skipped
#  cargo test --features fail/failpoints --no-fail-fast
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["fail/failpoints"]